--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,19 +4,16 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "BlueTopo"
-version = "0.3.0"
+version = "0.4.0"
 authors = [
-    {name = "Glen Rice", email = "ocs.nbs@noaa.gov"},
-    {name = "Tashi Geleg", email = "ocs.nbs@noaa.gov"},
+  { name = "Glen Rice", email = "ocs.nbs@noaa.gov" },
+  { name = "Tashi Geleg", email = "ocs.nbs@noaa.gov" },
 ]
 description = "National Bathymetric Source Project BlueTopo"
 readme = "README.md"
-license = {file ="LICENSE"}
+license = { file = "LICENSE" }
 keywords = ["BlueTopo", "National Bathymetric Source", "Bathymetry"]
-dependencies = [
-    "numpy",
-    "boto3",
-]
+dependencies = ["numpy", "boto3"]
 
 [project.scripts]
 fetch_tiles = "nbs.bluetopo.cli:fetch_tiles_command"
@@ -25,3 +22,4 @@ build_vrt = "nbs.bluetopo.cli:build_vrt_command"
 [project.urls]
 homepage = "https://www.nauticalcharts.noaa.gov/data/bluetopo.html"
 source = "https://github.com/noaa-ocs-hydrography/BlueTopo"
+
