--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "BlueTopo"
-version = "0.4.0"
+version = "0.5.0"
 authors = [
   { name = "Glen Rice", email = "ocs.nbs@noaa.gov" },
   { name = "Tashi Geleg", email = "ocs.nbs@noaa.gov" },
@@ -13,7 +13,7 @@ description = "National Bathymetric Source Project BlueTopo"
 readme = "README.md"
 license = { file = "LICENSE" }
 keywords = ["BlueTopo", "National Bathymetric Source", "Bathymetry"]
-dependencies = ["numpy", "boto3"]
+dependencies = ["numpy", "boto3", "tqdm"]
 
 [project.scripts]
 fetch_tiles = "nbs.bluetopo.cli:fetch_tiles_command"
@@ -22,4 +22,3 @@ build_vrt = "nbs.bluetopo.cli:build_vrt_command"
 [project.urls]
 homepage = "https://www.nauticalcharts.noaa.gov/data/bluetopo.html"
 source = "https://github.com/noaa-ocs-hydrography/BlueTopo"
-
